2013-09-02 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/massive/massive_edit_modules.php: added field "ip_target"
	for to massive edit module.

2013-08-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/servers/servers.build_table.php: fixed the tooltip for
	lag column.
	
	Fixes: #2378

2013-08-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/agent_manager.php: set the first default server
	when create a new agent.
	
	MERGED FROM THE BRANCH 4.0

2013-08-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/estado_generalagente.php: show a warning
	message when the agent has not a assigned server.
	
	* operation/agentes/ver_agente.php: some changes for to make more
	easy the merge with the last branch.
	
	MERGED FROM THE BRANCH 4.0

2013-08-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/groups/group_list.php: fixed pagination mismatch.
	
	Fixes: #2383

2013-08-29 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_snmp_browser.php: fixed PHP warnings.

2013-08-29 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: added supoport for disabled unknown
	events modules, components and policies.

2013-08-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor_common.php: added code to
	policy module editor with disabled unknown events modules.

2013-08-28 Miguel de Dios <miguel.dedios@artica.
es>
	
	* include/functions_modules.php: fixed the massive copy modules
	between agents.

2013-08-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor.php,
	include/javascript/pandora_modules.js: implemented the disabled
	unknown events for local modules.

2013-08-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/agent_manager.php: fixed the PHP warnings in the
	call to enterprise function.

2013-08-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* pandoradb.postgreSQL.sql, pandoradb.oracle.sql,